--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -21,7 +21,7 @@
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
 
-  <%= f.button :submit %>
+  <%= f.button :submit, class: "btn btn-primary" %>
 <% end %>
 
 </div>
