--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,7 +33,7 @@
 
           <div class="text-center add-margin product-controls text-modif">
             <%= link_to "Go!", request_book_path(@book),
-            {class: "btn btn-primary", :method => :post} %>
+            {class: "btn btn-primary btn-small", :method => :post} %>
           </div>
 
         </div>
